--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
-    "fastapi[standard] (>=0.116.1,<0.117.0)"
+    "fastapi[standard] (>=0.116.1,<0.117.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)",
+    "taskipy (>=1.14.1,<2.0.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "alembic (>=1.16.5,<2.0.0)"
 ]
 
 
@@ -42,6 +46,7 @@ lint = 'ruff check'
 pre_format = 'ruff check --fix'
 format = 'ruff format'
 run = 'fastapi dev fastapi_tcc/app.py'
+runlan = 'fastapi dev fastapi_tcc/app.py --host 0.0.0.0'
 pre_test = 'task lint'
 post_test = 'coverage html'
 test = 'pytest -s -x --cov=fastapi_tcc -vv'
